# Random_C_projects

DoublePendulum/: .clangd  CMakeLists.txt  doublependulum.c
SDL_practice/tv/: .clangd  CMakeLists.txt  sdl_tv.c
cache_optimization/: test.c
